# training_training

./: .README.md.swp  .env  README.md  cifar10_training.py  cifar10_training.sh  main.py  pyproject.toml  simple_training_example.py
