[project]
name = "training-training"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.11.*"
dependencies = [
    "torch==2.8.0+rocm6.4",
    "torchvision==0.23.0+rocm6.4",
    "torchaudio==2.8.0+rocm6.4",
    "pytorch-triton-rocm>=3.4.0",
    "scikit-learn>=1.7.2",
    "matplotlib>=3.10.6",
    "numpy>=2.1.2",
]

[[tool.uv.index]]
name = "rocm"
url = "https://download.pytorch.org/whl/rocm6.4"
explicit = true

[tool.uv.sources]
"torch" = { index = "rocm" }
"torchvision" = { index = "rocm" }
"torchaudio" = { index = "rocm" }
"pytorch-triton-rocm" = { index = "rocm" }

[dependency-groups]
dev = [
    "ipython>=9.5.0",
    "notebook>=7.4.5",
]
